<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/login_colorPrimary"
            android:gravity="center"
            android:paddingTop="@dimen/login_twenty_margin"
            android:text="@string/login_virgil_firebase_messenger"
            android:textColor="@color/login_snow"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/login_colorPrimary"
            android:paddingBottom="@dimen/login_default_margin"
            android:scaleType="center"
            android:src="@drawable/login_ic_logo_virgil_vertical"
            android:tint="@color/login_snow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/login_virgil_light"
            android:gravity="center"
            android:text="@string/login_please_enter_creds"
            android:textColor="@color/login_snow"
            android:textSize="17sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_fourty_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/login_fourty_margin"
        android:layout_marginBottom="8dp"
        app:errorTextAppearance="@style/login_error_appearance"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_id"
            android:inputType="text"
            android:maxLength="32"
            android:textColorHint="@color/login_black_olive"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_fourty_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/login_fourty_margin"
        app:errorTextAppearance="@style/login_error_appearance"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilId"
        app:layout_constraintVertical_chainStyle="packed"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="32"
            android:textColorHint="@color/login_black_olive"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_half_default_margin"
        android:layout_marginEnd="@dimen/login_fourty_margin"
        android:background="@drawable/login_bg_btn_round_32"
        android:minHeight="42dp"
        android:text="@string/login_signup"
        android:textAllCaps="false"
        android:textColor="@color/login_black_olive"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSignUp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_virgil_securiry_copyright"
        android:textColor="@color/login_black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>